[package]
name = "oracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

engine = { path = "../engine"}

serde = { workspace = true }
bincode = { workspace = true }
rand = "0.8.5"

console = { workspace = true }
md5 = "0.7.0"